--- a/index.html
+++ b/index.html
@@ -24,13 +24,9 @@
         <h1>Hoş Geldiniz!</h1>
     </header>
     
-    <section>
-        <p>Bu, basit bir HTML sayfasının içeriğidir.</p>
-        <p>Dilediğiniz gibi düzenleyebilir ve özelleştirebilirsiniz.</p>
+    <section >
+       <p>Bu blog sayfası yakın zamanda güncellenecektir!!!</p>
     </section>
 
-    <footer>
-        <p>&copy; 2023 Basit HTML Sayfası</p>
-    </footer>
 </body>
 </html>
