--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     
     <section >
-       <p>Bu blog sayfası yakın zamanda güncellenecektir!!!</p>
+       <p>Bu sayfa yakın zamanda güncellenecektir!!!</p>
     </section>
 
 </body>
